--- a/index.html
+++ b/index.html
@@ -282,14 +282,12 @@
                         <div class="yeo-footer-content">
                             <h4>Clients</h4>
                             <ul class="nav">
+                                
                                 <li class="nav-item">
-                                    <a href="">s</a>
+                                    <a href="">wakatime</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="">img</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="">https://www.organzadresses.com</a>
+                                    <a href="https://www.organzadresses.com">organzadresses</a>
                                 </li>
                             </ul>
                         </div>
@@ -302,7 +300,7 @@
                                     <a href="">youssef.bachar7@gmail.com</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="">Twitter</a>
+                                    <a href="https://twitter.com/YL_BACHAR">Twitter</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="https://github.com/YOUSSEF-YL">Github</a>
